// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdfBQB sc-gsTEea eTilcL jGCERI"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdfBQB sc-gsTEea ljFUMk jGCERI"
>
  foo
</button>
`;
